--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
 
       # Step 5: Create CNAME file
       - name: Create CNAME file
-        run: echo "todo.itkamianets.com" > CNAME
+        run: echo "todo.itkamianets.com" > ./dist/todo/browser/CNAME
 
       # Step 6: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
